# ansible_playbook.devenv

./: .envrc  .gitignore  Makefile  README.md  ansible.cfg  bootstrap.sh  hosts.vm  localhost.inventory  pyproject.toml  requirements.yml  site.yml
handlers/: main.yml
inventories/: box.toml  localhost.toml
playbooks/: basic-devtools.yml  basic-locale.yml  basic-setup-measurable.yml  basic-setup.yml  basic-x11.yml  dev-for-arduino.yml  dev-for-jvm.yml  dev-for-xdp.yml  dev-kmod.yml  dev-with-autotools.yml  dev-with-cassandra.yml  dev-with-elixir.yml  dev-with-go.yml  dev-with-pcaptools.yml  dev-with-protoc.yml  dev-with-python3.yml  dev-with-rust.yml  dev-with-tinygo.yml  dev-with-ts.yml  dev-with-zig.yml  main.yml
roles/autotools/tasks/: main.yml
roles/buf/defaults/: main.yml
roles/buf/tasks/: main.yml
roles/cmd_install/defaults/: main.yml
roles/cmd_install/tasks/: gh_extension.yml  goinstall.yml
roles/common/tasks/: main.yml
roles/common_ansible_appliable/tasks/: main.yml
roles/common_timesyncd/tasks/: main.yml
roles/common_x11/handlers/: main.yml
roles/common_x11/tasks/: main.yml
roles/ctags/defaults/: main.yml
roles/ctags/handlers/: main.yml
roles/ctags/tasks/: main.yml
roles/ctags/tests/: test.yml
roles/ctags/vars/: main.yml
roles/debug_network/handlers/: main.yml
roles/debug_network/tasks/: main.yml
roles/debug_vm/defaults/: main.yml
roles/debug_vm/tasks/: main.yml
roles/dev_utils/defaults/: main.yml
roles/elixir/tasks/: main.yml
roles/rust/: README.md
scripts/: certifi_path.py  init.sh  mk_role.sh  set_certpath.bashrc
(+115 files in other folders)
