[tool.poetry]
name = "ansible-playground"
version = "0.1.0"
description = "Playbook collection to construct my dev environments."
authors = ["Kanai Masumi <masumi.net@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
certifi = "^2021.5.30"

[tool.poetry.dev-dependencies]
ansible = "^2.10.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
